--- a/lib/src/main/res/layout/layout_video.xml
+++ b/lib/src/main/res/layout/layout_video.xml
@@ -10,4 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ImageView
+        android:id="@+id/img_start"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/start" />
+
 </RelativeLayout>
