播放器底部控制器基本布局

--- a/lib/src/main/res/layout/layout_video.xml
+++ b/lib/src/main/res/layout/layout_video.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:id="@+id/img_start"
+        android:id="@+id/img_center_controller"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
@@ -23,5 +23,34 @@
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:visibility="invisible" />
+
+    <RelativeLayout
+        android:id="@+id/bottom_container"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true">
+
+        <ImageView
+            android:id="@+id/img_bottom_controller"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <SeekBar
+            android:id="@+id/progress_seekbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true" />
+
+        <TextView
+            android:id="@+id/tv_progress_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/img_screen_full_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
