底部控制器可见性定时隐藏,添加几张图片

--- a/lib/src/main/res/layout/layout_video.xml
+++ b/lib/src/main/res/layout/layout_video.xml
@@ -28,18 +28,24 @@
         android:id="@+id/bottom_container"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:padding="1dp"
+        android:visibility="invisible">
 
         <ImageView
             android:id="@+id/img_bottom_controller"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/pause_mini" />
 
         <SeekBar
             android:id="@+id/progress_seekbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:layout_toStartOf="@id/img_screen_full_normal"
+            android:layout_toEndOf="@id/img_bottom_controller" />
 
         <TextView
             android:id="@+id/tv_progress_time"
@@ -48,8 +54,11 @@
 
         <ImageView
             android:id="@+id/img_screen_full_normal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/full" />
 
     </RelativeLayout>
 
